# facultative_ai_support

./: .coverage  .env  .gitignore  Analysis.docx  LICENSE  Makefile  README.md  config.py  docker-compose.local.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  email_B.Vaidyanathan _vaidyanathan_20250926_035835.csv  email_Elcy Mascarenhas _elcy_20250926_035835.csv  email_Roshan Ambavale _ROSHAN.AMBAVA_20250926_035835.csv  exchange_rates.csv  exposure.py  extraction.py  fac decision support.py  facultative_analysis_results.xlsx  facultative_output.xlsx  mail_info_extraction_module.py  melting_point.py  mock2.xlsx  mock3.xlsx  mock_facultative.xlsx  nlp_module.py  ocr test four Tuesday 30 Sept 2025.py  processed_facultative.xlsx  pyproject.toml  pytest.ini  requirements.txt  run_mock_tests.py  setup-local-dev.py  setup.py  utility.py
backend/: .env.example  .flake8  API_DOCUMENTATION.md  Dockerfile  Dockerfile.dev  Dockerfile.local  EXCEL_REPORT_GENERATION.md  README.md  README_EMAIL_PROCESSING.md  alembic.ini  create_sample_excel.py  pyproject.toml  requirements-email.txt  requirements.txt  run_celery_beat.py  run_celery_worker.py  run_server.py  start.py  test_excel_report.py
docs/: AI-Powered Facultative Reinsurance Decision Support System.docx  FAC. Offer - GLACIER REFRIGERATION SERVICES CORPORATION OR GLACIER MEGAFRIDGE (FIRE FACULTATIVE OFFER).msg  Facultative Agriculture Risk Placement  Cairo 3A (Egypt)  Request for Line Support.msg
frontend/: .eslintrc.json  Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  (+1 more)
(+112 files in other folders)
