[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pytest-runner"
]
build-backend = "setuptools.build_meta"

[project]
name = "facultative_ai_support"
version = "0.1.0"
dependencies = [
    "transformers",
    "torch",
    "tensorflow",
    "pydantic",
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s --cov=src"
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
